--- a/gcp/_config.yaml
+++ b/gcp/_config.yaml
@@ -1,3 +1,11 @@
 remote_theme: pages-themes/modernist@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+sidebar:
+  - Chapter 1: Introduction
+  - label: Chapter 2
+    children:
+      - 2.1 Test
+      - 2.2 TEst
+  - Chapter 3: Testing
